--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,12 @@
+[build-system]
+requires = ["flit_core >=3.2,<4"]
+build-backend = "flit_core.buildapi"
+
+[tool.flit.module]
+name = "aiida_photometry"
+
 [project]
-name = "aiida-photometry"
+name = "aiida_photometry"
 version = "0.1.0a0"
 readme = "README.md"
 license = {file = 'LICENSE'}
@@ -25,14 +32,3 @@ dependencies = [
 "fill.mat" = "workflows.fill_workflow:FillWorkflow"
 "images.reduction" = "workflows.data_reduction:DataReduction"
 
-[tool.pylint.format]
-max-line-length = 125
-
-[tool.pylint.messages_control]
-disable = [
-    "too-many-ancestors",
-    "invalid-name",
-    "duplicate-code",
-    "too-many-locals",
-    "too-many-statements",
-]
